# japanese-company-extraction

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  mecabrc  pyproject.toml
