[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["peperoncino <2wua4nlyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mecab-python3 = "^1.0.6"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.101.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
